[project]
name = "nanitor-scanner"
version = "0.1.0"
description = "A comprehensive network scanner for network assessment and discovery"
requires-python = ">=3.11"
dependencies = [
    "nmap",
    "psutil",
    "requests",
    "scapy",
    "mac-vendor-lookup",
    "ping3",
    "pysnmp",
    "python-nmap",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["nanitor_scanner"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short" 
